--- a/j/ja/jac/jackinthebox.com.html
+++ b/j/ja/jac/jackinthebox.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jackinthebox.com privacy policy that was archived on 2013-05-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130512013843id_/http%3A//www.jackinthebox.com/legal-and-privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jackinthebox.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222013740id_/http%3A//www.jackinthebox.com/legal-and-privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="js canvas canvastext no-touch geolocation postmessage hashchange history draganddrop websockets rgba multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths night" lang="en" style=""><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -8,16 +8,16 @@
 <meta content="noindex" name="robots">
 <link href="http://www.jackinthebox.com/legal-and-privacy-policy" rel="canonical">
 <link href="/assets/favicon-80432789347d6a189bf93fab95a130e6.ico" rel="shortcut icon">
-<link href="/assets/touch/apple-touch-icon-dd681126dd7aa6dbf0cc20f569832121.png" rel="apple-touch-icon">
-<link href="/assets/touch/apple-touch-icon-144x144-precomposed-1da266969320d8ae15191588c39dbcaf.png" rel="apple-touch-icon-precomposed" sizes="144x144">
-<link href="/assets/touch/apple-touch-icon-114x114-precomposed-7e13e84c4514c2d1762f38747b181342.png" rel="apple-touch-icon-precomposed" sizes="114x114">
-<link href="/assets/touch/apple-touch-icon-72x72-precomposed-2e2d0a4d6a482be6f64627fe941bca14.png" rel="apple-touch-icon-precomposed" sizes="72x72">
-<link href="/assets/touch/apple-touch-icon-57x57-precomposed-f7bf426eb7d348d4f3ffade31caad454.png" rel="apple-touch-icon-precomposed">
-<link href="/assets/desktop-97e080e4482c4938cc2cc836ad77f0ee.css" media="screen" rel="stylesheet" type="text/css">
+<link href="/assets/touch/apple-touch-icon-bfee7f45ccb3d49009a1d95d8f3ca73e.png" rel="apple-touch-icon">
+<link href="/assets/touch/apple-touch-icon-144x144-precomposed-2b7c179b9b17c582fcdad5adb3e24e65.png" rel="apple-touch-icon-precomposed" sizes="144x144">
+<link href="/assets/touch/apple-touch-icon-114x114-precomposed-e934f39528635c217659d41c029148ac.png" rel="apple-touch-icon-precomposed" sizes="114x114">
+<link href="/assets/touch/apple-touch-icon-72x72-precomposed-87078109ae39629c87d1a95444e49414.png" rel="apple-touch-icon-precomposed" sizes="72x72">
+<link href="/assets/touch/apple-touch-icon-57x57-precomposed-5aab53ecd4f598c845fd8d0f92420806.png" rel="apple-touch-icon-precomposed">
+<link href="/assets/desktop-98e94c446c23633a3afce1fab27b8ecd.css" media="screen" rel="stylesheet" type="text/css">
 
 <meta content="authenticity_token" name="csrf-param">
-<meta content="IzRQGM+VXmC+2OzKHCz+d3tLdd81HGS86vwLy3fsEhU=" name="csrf-token">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>
+<meta content="mTkaR0N7G3yoZddvP5Jq3LLcxsBpSc0xp5SnmD7Hnyo=" name="csrf-token">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-WVM7C6"></script><script>
   //<![CDATA[
     var environment = "production";
     if (window.JITB == null) window.JITB = {};
@@ -54,11 +54,7 @@
 </fieldset>
 </form>
 </div>
-<ul class="socials">
-<li class="facebook"><a href="http://www.facebook.com/jackinthebox" target="_blank" title="Jack on Facebook">Facebook</a></li>
-<li class="twitter"><a href="http://twitter.com/JackBox" target="_blank" title="Jack on Twitter">Twitter</a></li>
-<li class="youtube"><a href="http://www.youtube.com/user/jackinthebox" target="_blank" title="Jack on Youtube">Youtube</a></li>
-</ul>
+<ul class=""><li class="facebook"><a href="http://www.facebook.com/jackinthebox" target="_blank" title="Jack on Facebook">Facebook</a></li><li class="twitter"><a href="http://twitter.com/JackBox" target="_blank" title="Jack on Twitter">Twitter</a></li><li class="instagram"><a href="http://instagram.com/jackinthebox" target="_blank" title="Jack on Instagram">Instagram</a></li><li class="youtube"><a href="http://www.youtube.com/user/jackinthebox" target="_blank" title="Jack on Youtube">Youtube</a></li><li class="tumblr"><a href="http://jackinthebox.tumblr.com/" target="_blank" title="Jack on Tumblr">Tumblr</a></li></ul>
 </div>
 </nav>
 <nav class="primary">
@@ -153,7 +149,7 @@
 
 <p>Users may choose to submit online to Jack in the Box Inc. names, email addresses, mobile phone numbers, gender, birthdate and/or zip codes from individuals who request to receive more information from Jack in the Box Inc. about its menu items, special offers or similar matters. All subsequent email communications include a link to easily unsubscribe from the email database. Unsubscribes can easily be submitted via <a href="http://www.jackinthebox.com/connect/unsubscribe">www.jackinthebox.com/connect/unsubscribe</a>.</p>
 
-<p>Users must explicitly consent to receiving messages on mobile phones in order to sign up for text mobile messages. Users may test HELP to 31278 for assistance or text STOP to 31278 to opt out of mobile messaging. Message and Data rates apply to mobile communications.</p>
+<p>Users must explicitly consent to receiving messages on mobile phones in order to sign up for text mobile messages. Users may text HELP to 31278 for assistance or text STOP to 31278 to opt out of mobile messaging. Message and Data rates apply to mobile communications.</p>
 
 <p>More on how we use above info, what we do with it.</p>
 
@@ -221,7 +217,7 @@
 <span class="glow">Texts</span>
 </h3>
 </header>
-<form accept-charset="UTF-8" action="/connect" class="formtastic newsletter_subscriber" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="IzRQGM+VXmC+2OzKHCz+d3tLdd81HGS86vwLy3fsEhU="></div><li class="phone input required stringish" id="newsletter_subscriber_mobile_phone_input"><label class=" label" for="newsletter_subscriber_mobile_phone">Mobile phone<abbr title="required">*</abbr></label><input id="newsletter_subscriber_mobile_phone" name="newsletter_subscriber[mobile_phone]" placeholder="MOBILE NUMBER" type="tel">
+<form accept-charset="UTF-8" action="/connect" class="formtastic newsletter_subscriber" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="mTkaR0N7G3yoZddvP5Jq3LLcxsBpSc0xp5SnmD7Hnyo="></div><li class="phone input required stringish" id="newsletter_subscriber_mobile_phone_input"><label class=" label" for="newsletter_subscriber_mobile_phone">Mobile phone<abbr title="required">*</abbr></label><input id="newsletter_subscriber_mobile_phone" name="newsletter_subscriber[mobile_phone]" placeholder="MOBILE NUMBER" type="tel">
 
 </li>
 <input id="quick" name="quick" type="hidden">
@@ -237,7 +233,7 @@
 <span class="glow">Email</span>
 </h3>
 </header>
-<form accept-charset="UTF-8" action="/connect" class="formtastic newsletter_subscriber" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="IzRQGM+VXmC+2OzKHCz+d3tLdd81HGS86vwLy3fsEhU="></div><li class="email input required stringish" id="newsletter_subscriber_email_address_input"><label class=" label" for="newsletter_subscriber_email_address">Email address<abbr title="required">*</abbr></label><input id="newsletter_subscriber_email_address" name="newsletter_subscriber[email_address]" placeholder="EMAIL ADDRESS" type="email">
+<form accept-charset="UTF-8" action="/connect" class="formtastic newsletter_subscriber" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="mTkaR0N7G3yoZddvP5Jq3LLcxsBpSc0xp5SnmD7Hnyo="></div><li class="email input required stringish" id="newsletter_subscriber_email_address_input"><label class=" label" for="newsletter_subscriber_email_address">Email address<abbr title="required">*</abbr></label><input id="newsletter_subscriber_email_address" name="newsletter_subscriber[email_address]" placeholder="EMAIL ADDRESS" type="email">
 
 </li>
 <input id="quick" name="quick" type="hidden">
@@ -263,13 +259,7 @@
 <li class="corporate"><a href="http://www.jackintheboxinc.com" target="_blank" title="jackintheboxinc.com">Corporate</a></li>
 </ul>
 </nav>
-<nav class="social">
-<ul>
-<li class="facebook"><a href="http://www.facebook.com/jackinthebox" target="_blank" title="Jack on Facebook">Facebook</a></li>
-<li class="twitter"><a href="http://twitter.com/JackBox" target="_blank" title="Jack on Twitter">Twitter</a></li>
-<li class="youtube"><a href="http://www.youtube.com/user/jackinthebox" target="_blank" title="Jack on Youtube">Youtube</a></li>
-</ul>
-</nav>
+<nav class="social"><ul class=""><li class="facebook"><a href="http://www.facebook.com/jackinthebox" target="_blank" title="Jack on Facebook">Facebook</a></li><li class="twitter"><a href="http://twitter.com/JackBox" target="_blank" title="Jack on Twitter">Twitter</a></li><li class="instagram"><a href="http://instagram.com/jackinthebox" target="_blank" title="Jack on Instagram">Instagram</a></li><li class="youtube"><a href="http://www.youtube.com/user/jackinthebox" target="_blank" title="Jack on Youtube">Youtube</a></li><li class="tumblr"><a href="http://jackinthebox.tumblr.com/" target="_blank" title="Jack on Tumblr">Tumblr</a></li></ul></nav>
 </div>
 <nav class="legal">
 <div class="container">
@@ -335,11 +325,17 @@
 
 </div>
 
-<script src="/assets/desktop-46829a03ca04a54f21ef53778819d228.js" type="text/javascript"></script>
+<script src="/assets/desktop-07feea0fe322c3f300b986089044acaa.js" type="text/javascript"></script>
 
 
+<noscript>
+<iframe frameborder='0' height='0' src='//www.googletagmanager.com/ns.html?id=GTM-WVM7C6' style='display:none;visibility:hidden' width='0'></iframe>
+</noscript>
 <script>
   //<![CDATA[
+    // Google Tag Manager
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-WVM7C6');
+    
     // Google Analytics
     var _gaq = _gaq || [];
     
@@ -358,14 +354,14 @@ NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
 e.type="text/javascript";
 e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";
+  "js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-4.newrelic.com","4b1a7ed175","1757622","dgsKFkJWCg8DR0lUUVIFCE1ZVwIGHg==",16,11,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-6.newrelic.com","4b1a7ed175","1757622","dgsKFkJWCg8DR0lUUVIFCE1ZVwIGHg==",14,84,new Date().getTime(),"","","","",""]);</script>
 
-<!-- Render: 2013-05-07 09:51:50 -0700 -->
+<!-- Render: 2013-12-18 21:43:26 -0800 -->
 
-<script type="text/javascript" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script></body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
