--- a/u/ut/uto/utoypia.com.html
+++ b/u/ut/uto/utoypia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the utoypia.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620103046id_/http%3A//www.utoypia.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the utoypia.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222014914id_/http%3A//www.utoypia.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -14,6 +14,15 @@
 _uacct = "UA-140742-1";
 urchinTracker();
 </script>
+
+<script language="javascript" type="text/javascript">
+//<![CDATA[
+var tl_loc0=(window.location.protocol == "https:")? "https://secure.comodo.net/trustlogo/javascript/trustlogo.js" :
+"http://www.trustlogo.com/trustlogo/javascript/trustlogo.js";
+document.writeln('<scr' + 'ipt language="JavaScript" src="'+tl_loc0+'" type="text\/javascript">' + '<\/scr' + 'ipt>');
+//]]>
+</script><script language="JavaScript" src="https://secure.comodo.net/trustlogo/javascript/trustlogo.js" type="text/javascript"></script>
+
 
 </head>
 
@@ -40,7 +49,7 @@ urchinTracker();
 <tbody><tr>
 <td width="290" align="left"><a href="http://www.utoypia.com/"><img src="images/u_logo_top.gif" width="287" height="54" border="0" alt=""></a></td>
 
-<td width="276" align="center"><img src="images/up_slogan_156.gif" width="156" height="27" border="0" alt=""></td>
+<td width="276" align="center"><img src="images/up_slogan_156.gif" width="110" height="34" border="0" alt=""></td>
 
 <td width="224" align="right"><a href="http://www.utoypia.com/details.php"><img src="images/f_ship.gif" width="209" height="43" border="0" alt=""></a></td>
 </tr>
@@ -58,7 +67,9 @@ urchinTracker();
 <td width="960" height="2" bgcolor="#FFFF00" align="center" colspan="3"><img src="images/spacerfront.gif" width="1" height="2" border="0" alt=""></td>
 </tr>
 
-
+<tr>
+<td width="960" height="25" bgcolor="#FFFF00" align="center" colspan="3"><center><a href="http://www.utoypia.com/holidayshipping.php"><img src="images/Holiday_Shipping_Banner.png" border="0" alt=""></a></center></td>
+</tr>
 
 <tr>
 <td width="960" height="2" bgcolor="#FFFF00" align="center" colspan="3"><img src="images/spacerfront.gif" width="1" height="2" border="0" alt=""></td>
@@ -88,7 +99,7 @@ urchinTracker();
 </td>
 
 <td width="262" align="center">
-<div class="toplinksnew">1-866-574-8697</div>
+<div class="toplinksnew"><img src="images/spacerfront.gif" width="1" height="2" border="0" alt=""></div>
 </td>
 </tr>
 </tbody></table>
@@ -114,7 +125,6 @@ urchinTracker();
 
 <td width="150" valign="top">
 <img src="https://www.utoypia.com/images/side_scan.gif" width="48" height="55" border="0" alt="0">
-<a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.utoypia.com"><img width="94" height="54" border="0" src="//images.scanalert.com/meter/www.utoypia.com/13.gif" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE is a Trademark of ScanAlert'); return false;"></a>
 </td>
 
 <!-- End Scan Include -->
@@ -197,23 +207,19 @@ urchinTracker();
 <div class="leftnavlinks">
     <a href="http://www.utoypia.com/brio.php?Name=Brio">BRIO</a><br>
 
-    <a href="http://www.utoypia.com/products.php?Name=Early_Years">Early Years</a><br>
-
     <a href="http://www.utoypia.com/erectorsets.php?Name=Erector">Erector Sets</a><br>
 
     <a href="http://www.utoypia.com/products.php?Name=Fisher_Price">Fisher Price</a><br>
+
+    <a href="http://www.utoypia.com/products.php?Name=Lincoln_Logs">Lincoln Logs</a><br>
 
     <a href="http://www.utoypia.com/plantoys.php?Name=Plantoys">Plan Toys</a><br>
     
     <a href="http://www.utoypia.com/playmobil.php?Name=Playmobil">Playmobil</a><br>
 
-    <a href="http://www.utoypia.com/products.php?Name=Quercetti">Quercetti</a><br>
-
     <a href="http://www.utoypia.com/products.php?Name=Schylling">Schylling</a><br>
 
-    <a href="http://www.utoypia.com/products.php?Name=Tonka">Tonka</a><br>
-
-    <a href="http://www.utoypia.com/products.php?Name=Wild_Science">Wild Science</a><br><br>
+    <a href="http://www.utoypia.com/products.php?Name=Tonka">Tonka</a><br><br>
 
     <a href="http://www.utoypia.com/allbrands.php">More Brands...</a>
     
@@ -501,7 +507,7 @@ Should you have other questions or concerns about these privacy policies, please
 </td>
 
 <td width="262" align="center">
-<div class="toplinksnew">1-866-574-8697</div>
+<div class="toplinksnew"><img src="images/spacerfront.gif" width="1" height="2" border="0" alt=""></div>
 </td>
 </tr>
 </tbody></table>
@@ -596,23 +602,48 @@ Should you have other questions or concerns about these privacy policies, please
 
 <center>
 
-<a target="_BLANK" title="uTOYpia, Inc. BBB Business Review" href="http://www.bbb.org/wisconsin/business-reviews/toys-retail/utoypia-inc-in-eagle-wi-14039489/#bbbonlineclick"><img alt="uTOYpia, Inc. BBB Business Review" border="0" src="https://ourbbbonline2.bbb.org/Milwaukee/BBBOnlineSeal/14039489/H1/0/seal.png"></a>
-
-&nbsp;&nbsp;
 
 <img border="0" src="images/creditcards_images.png" width="199" height="90">
 <br>
 
-<table width="135" border="0" cellpadding="2" cellspacing="0">
+<table width="100%" border="0" cellpadding="2" cellspacing="0">
 <tbody><tr>
-<td width="135" align="center" valign="top">
-<img src="images/comodo_secure_100x85_transp.png" width="100" height="85" alt="">
+<td width="100%" align="center" valign="top">
+<script language="JavaScript" type="text/javascript">
+TrustLogo("https://www.utoypia.com/images/tl_transp.gif", "SC5", "none");
+</script>
+
+&nbsp;&nbsp;
+
+<a href="http://www.shopperapproved.com/reviews/utoypia.com/" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; var certheight=screen.availHeight-90; window.open(this.href,'shopperapproved','location='+nonwin+',scrollbars=yes,width=620,height='+certheight+',menubar=no,toolbar=no'); return false;">
+<img src="https://c683207.ssl.cf2.rackcdn.com/8204-r.gif" style="border: 0" alt="" oncontextmenu="var d = new Date(); alert('Copying Prohibited by Law - This image and all included logos are copyrighted by shopperapproved \251 '+d.getFullYear()+'.'); return false;"></a>
+
+
 </td>
 </tr>
 </tbody></table>
 </center>
 <br>
 <div class="termsofuse">Copyright © 1999-2013 uTOYpia, Inc. All rights reserved. - uTOYpia® is a registered trademark of uTOYpia, Inc.&nbsp; <a href="termsofuse.php" class="bottom">Terms of Use</a></div>
+
+<!-- Google Code for Remarketing Tag -->
+<!--------------------------------------------------
+Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
+--------------------------------------------------->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1072644100;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1072644100/?value=0&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 </td>
 </tr>
