--- a/d/dr/dri/driverstock.com.html
+++ b/d/dr/dri/driverstock.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the driverstock.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622040210id_/http%3A//www.driverstock.com/privacypolicy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the driverstock.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222030500id_/http%3A//www.driverstock.com/privacypolicy/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Privacy Policy</title>
@@ -35,9 +35,9 @@
               <tbody><tr>
 			    <td class="logo" width="265">
                    <a href="/" class="logol"><img src="/i/top_mo.gif" width="265" height="22" border="0" alt="Privacy Policy"><br>www.driverstock.com</a><br>
-                   <h1>Privacy Policy</h1>
+                   Largest collection of free drivers
                 </td>
-			    <td align="left" valign="top" width="87"><img src="/i/top_ico.gif" width="87" height="51" alt="Free drivers"></td>
+			    <td align="left" valign="top" width="87"><img src="/i/top_ico.gif" width="87" height="51" alt=""></td>
                 <td align="center" valign="middle" style="padding:4px 0 4px 0">&nbsp;
                 <!--<a href="/ads/gb.php?cl" target="_blank"><img src="http://send.onenetworkdirect.net/42/93801/13816" width="468" height="60" alt="ads" border="0"></a>-->
                 </td>
@@ -110,7 +110,7 @@ function add_favorite(a) {
               </div>
 
                 			  <table width="100%" border="0" cellspacing="0" cellpadding="4">
-              <tbody><tr><td class="rh1"><b>Search free drivers:</b></td></tr>
+              <tbody><tr><td class="rh1"><b>Search</b></td></tr>
               </tbody></table>
                <div id="last"><div>
               <form name="form1" action="/search" method="post" style="padding-bottom:0px;margin-bottom:0px" onsubmit="form1.action = &quot;http://www.driverstock.com/search/&quot; + form1.sidgr.value + &quot;/&quot; + form1.srchtext.value; form1.submit();">
@@ -171,14 +171,14 @@ function add_favorite(a) {
                 <input type="text" name="srchtext" value="" class="inp"></td>
 		      </tr>
               <tr><td valign="center"><input type="image" src="/i/top_but.gif"><br><br>
-              <b>Can't find driver? Try to find required drivers automatically with <a href="http://www.smarttweak.com/umd/ref_15040" rel="”nofollow”">UpdateMyDrivers</a> utility.</b>
+              <b>Can't find driver? Try <a href="http://www.smarttweak.com/umd/ref_15040" rel="nofollow" target="_blank">this</a></b>!
               </td></tr>
 			  </tbody></table>
 			  </form>
               </div></div>
 
                                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                <tbody><tr><td class="rh1"><b>Driver type:</b></td></tr>
+                <tbody><tr><td class="rh1"><b>Categories</b></td></tr>
                 <tr><td class="pt10">
                   <div id="cat" style="padding-bottom:0px;margin:0px">
 	                <a href="/BIOS-Update-drivers/0-36/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">BIOS Update (4175)</div></a><a href="/Camcorder-drivers/0-25/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Camcorder (376)</div></a><a href="/CD-DVD-Combo-RW-drivers/0-13/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">CD/DVD/Combo/RW (471)</div></a><a href="/Keyboard-drivers/0-2/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Keyboard (105)</div></a><a href="/Mobile-Phones-and-GPS-drivers/0-29/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Mobile Phones and GPS (119)</div></a><a href="/Modem-drivers/0-33/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Modem (428)</div></a><a href="/Monitor-drivers/0-20/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Monitor (547)</div></a><a href="/Motherboard-drivers/0-9/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Motherboard (15303)</div></a><a href="/Mouse-and-TrackBall-drivers/0-1/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Mouse and TrackBall (241)</div></a><a href="/Network-drivers/0-28/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Network (1009)</div></a><a href="/Notebook-drivers/0-21/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Notebook (15436)</div></a><a href="/Other-drivers/0-34/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Other (596)</div></a><a href="/PC-Camera-drivers/0-3/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">PC Camera (192)</div></a><a href="/PDA-drivers/0-30/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">PDA (1294)</div></a><a href="/Printer-drivers/0-26/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Printer (13700)</div></a><a href="/Projector-drivers/0-35/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Projector (319)</div></a><a href="/Scanner-drivers/0-7/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Scanner (819)</div></a><a href="/Sound-Card-drivers/0-32/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Sound Card (367)</div></a><a href="/Storage-SCSI-RAID-drivers/0-11/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Storage SCSI RAID (145)</div></a><a href="/TV-and-FM-Tuner-drivers/0-31/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">TV and FM Tuner (51)</div></a><a href="/Video-Card-drivers/0-10/index.html"><div onmouseover="ch1(this)" onmouseout="ch2(this)">Video Card (1353)</div></a>
@@ -298,7 +298,7 @@ function add_favorite(a) {
           </tr>
           <tr bgcolor="#EEEEEE">
             <td colspan="2" style="padding-bottom:10px" align="center">
-              © 2005 Copyright DriverStock.com All right reserved
+              © 2005-2013 Copyright DriverStock.com All right reserved
             </td>
           </tr>
           </tbody></table>
@@ -330,5 +330,6 @@ var sc_security="37e1f580";
   })();
 
 </script>
+
 
 </body></html>
