--- a/l/la/lat/latestays.com.html
+++ b/l/la/lat/latestays.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the latestays.com privacy policy that was archived on 2013-05-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130510204820id_/http%3A//www.latestays.com/policies/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the latestays.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222034549id_/http%3A//www.latestays.com/policies/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en_US"><head>
     <title>Asia Web Direct.com: Privacy</title>    
@@ -113,6 +113,20 @@
     <td height="50" align="CENTER" valign="middle"><input type="button" value="CLOSE WINDOW" onclick="window.close()"></td>
   </tr>
 </tbody></table>
-  
+	
+<!-- GTA Nov 2013 -->
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-111621-9']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+<!-- /GTA Nov 2013 -->
+   
 
   </body></html>
