--- a/f/fr/fre/freehtml5templates.com.html
+++ b/f/fr/fre/freehtml5templates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freehtml5templates.com privacy policy that was archived on 2013-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130530060049id_/http%3A//www.freehtml5templates.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freehtml5templates.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222040048id_/http%3A//www.freehtml5templates.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -133,7 +133,6 @@ var _wpcf7 = { cached: 1 };
 	<li class="page_item page-item-1828"><a href="http://freehtml5templates.com/designers/michelangelo/" title="Michelangelo">Michelangelo</a></li>
 </ul>
 </li>
-<li class="page_item page-item-1595"><a href="http://freehtml5templates.com/wp-themes-store/" title="Store">Store</a></li>
 <li class="page_item page-item-17"><a href="http://freehtml5templates.com/contact/" title="Contact">Contact</a></li>
 		</ul>
 		<!--
@@ -202,16 +201,7 @@ var _wpcf7 = { cached: 1 };
 		<ul>
 
 
-			<li id="text-10" class="widget widget_text"><h3>Recommended</h3><div class="box">			<div class="textwidget"><a href="http://www.wildfiremarketinggroup.com/website-checklist/" rel="nofollow"><img src="http://freehtml5templates.com/images/wdcl-a.jpg" alt="web design checklist"></a>
-<br>
-<a href="http://www.wix.com/eteam1/fish_build_a_free_flash_websit?utm_campaign=ma_freehtml5templates.com&amp;experiment_id=ma_freehtml5templates.com250circlesFrye_fish" rel="nofollow"><img src="http://freehtml5templates.com/images/wix250oct.png" alt="wix"></a></div>
-		</div></li><li id="wp_digi_cart_widgets" class="widget widget_wp_digi_cart"><h3>Your Cart</h3><div class="box">Your cart is empty<br><a rel="nofollow" href="http://www.freehtml5templates.com/wp-themes-store/">Visit The Shop</a></div></li><li id="execphp-3" class="widget widget_execphp"><h3>Sponsors</h3><div class="box">			
-			<div class="execphpwidget"><a href="http://dazzd.com/themeforest" rel="nofollow"><img src="http://freehtml5templates.com/images/tf_125x125_v5.gif" alt=""></a> <a href="http://dazzd.com/dreamtemplate" rel="nofollow"><img src="http://freehtml5templates.com/images/dreamtemplate.gif" alt=""></a></div>
-		</div></li><li id="text-6" class="widget widget_text"><h3>Tell Others About Us</h3><div class="box">			<div class="textwidget"><p>Mind if we ask a small favor from you? Please share our site with others. Tweet about us, tell your Facebook buddies about us, blog about us, or just tell your friends about us the old-fashioned way. Thank you for helping this site out by sharing it.</p>
-<p><a href="http://twitter.com/home?status=Currently browsing: Free open-source HTML5 templates at http://freehtml5templates.com" title="Click to tweet about us" target="_blank">Click to Tweet About Us!</a></p>
-<p><a href="http://www.facebook.com/sharer.php?u=http://freehtml5templates.com&amp;t=Currently browsing: Free open-source HTML5 templates at http://freehtml5templates.com">Click to share on Facebook</a></p>
-</div>
-		</div></li><li id="text-4" class="widget widget_text"><h3>Follow Us</h3><div class="box">			<div class="textwidget"><p><img src="http://freehtml5templates.com/images/rss.gif" alt="rss feed"> <a href="http://feeds.feedburner.com/FreeHtml5Templates">Subscribe to our free RSS Feed</a><br>
+			<li id="text-4" class="widget widget_text"><h3>Follow Us</h3><div class="box">			<div class="textwidget"><p><img src="http://freehtml5templates.com/images/rss.gif" alt="rss feed"> <a href="http://feeds.feedburner.com/FreeHtml5Templates">Subscribe to our free RSS Feed</a><br>
 <img src="http://freehtml5templates.com/images/email.gif" alt="email subscription"> <a href="http://feedburner.google.com/fb/a/mailverify?uri=FreeHtml5Templates&amp;loc=en_US">Keep up to date via email</a><br>
 <img src="http://freehtml5templates.com/images/twitter.png" alt="twitter"> <a href="http://twitter.com/html5templates">Follow us on Twitter</a><br>
 <img src="http://freehtml5templates.com/images/icon_facebook.png" alt="facebook"> <a href="http://www.facebook.com/freehtml5templates">Find us on Facebook</a></p>
@@ -228,10 +218,6 @@ var _wpcf7 = { cached: 1 };
 				<li><a href="http://freehtml5templates.com/gardenfolio-html5-and-css3-template/" title="Gardenfolio HTML5 and CSS3 Template">Gardenfolio HTML5 and CSS3 Template</a></li>
 				<li><a href="http://freehtml5templates.com/principato-html5-and-css-template/" title="Principato HTML5 and CSS Template">Principato HTML5 and CSS Template</a></li>
 				</ul>
-		</div></li><li id="text-9" class="widget widget_text"><h3>Other Downloads and Tools</h3><div class="box">			<div class="textwidget"><p><a href="http://freehtml5templates.com/html5-quick-learning-guide/">HTML5 Quick Learning Guide</a></p>
-<p><a href="http://freehtml5templates.com/gradientgenerator/gradient-generator.php" target="_blank">Quick CSS3 Gradient Generator (Three Colors)</a></p>
-<p><a href="http://freehtml5templates.com/gradientgenerator/gradient-generator2.php" target="_blank">Quicker CSS3 Gradient Generator (Two Colors)</a></p>
-</div>
 		</div></li><li id="pages-3" class="widget widget_pages"><h3>Contributing Designers</h3><div class="box">		<ul>
 			<li class="page_item page-item-439"><a href="http://freehtml5templates.com/designers/" title="Designers">Designers</a>
 <ul class="children">
@@ -245,6 +231,14 @@ var _wpcf7 = { cached: 1 };
 </ul>
 </li>
 		</ul>
+		</div></li><li id="text-6" class="widget widget_text"><h3>Tell Others About Us</h3><div class="box">			<div class="textwidget"><p>Mind if we ask a small favor from you? Please share our site with others. Tweet about us, tell your Facebook buddies about us, blog about us, or just tell your friends about us the old-fashioned way. Thank you for helping this site out by sharing it.</p>
+<p><a href="http://twitter.com/home?status=Currently browsing: Free open-source HTML5 templates at http://freehtml5templates.com" title="Click to tweet about us" target="_blank">Click to Tweet About Us!</a></p>
+<p><a href="http://www.facebook.com/sharer.php?u=http://freehtml5templates.com&amp;t=Currently browsing: Free open-source HTML5 templates at http://freehtml5templates.com">Click to share on Facebook</a></p>
+</div>
+		</div></li><li id="text-9" class="widget widget_text"><h3>Other Downloads and Tools</h3><div class="box">			<div class="textwidget"><p><a href="http://freehtml5templates.com/html5-quick-learning-guide/">HTML5 Quick Learning Guide</a></p>
+<p><a href="http://freehtml5templates.com/gradientgenerator/gradient-generator.php" target="_blank">Quick CSS3 Gradient Generator (Three Colors)</a></p>
+<p><a href="http://freehtml5templates.com/gradientgenerator/gradient-generator2.php" target="_blank">Quicker CSS3 Gradient Generator (Two Colors)</a></p>
+</div>
 		</div></li><li id="text-5" class="widget widget_text"><h3>Promote Your Designs With Us</h3><div class="box">			<div class="textwidget"><p>Share free HTML5 templates here and in return, we'll give you lots of free advertising for your premium designs or custom work. Just <a href="http://freehtml5templates.com/contact/">contact us</a> to make it happen.</p>
 </div>
 		</div></li><li id="tag_cloud-3" class="widget widget_tag_cloud"><h3>Tag Cloud</h3><div class="box"><div class="tagcloud"><a href="http://freehtml5templates.com/tag/1-column/" class="tag-link-52" title="18 topics" style="font-size: 14.596153846154pt;">1-column</a>
@@ -294,17 +288,6 @@ var _wpcf7 = { cached: 1 };
 <a href="http://freehtml5templates.com/tag/webfonts/" class="tag-link-63" title="4 topics" style="font-size: 10.692307692308pt;">webfonts</a></div>
 </div></li><li id="text-7" class="widget widget_text"><h3>Best Viewed In</h3><div class="box">			<div class="textwidget"><p>Of course, not all browsers are ready for HTML5 or CSS3, so if these templates look odd for some reason, you may need to switch to a more modern browser to see them correctly. Try <a href="http://www.google.com/chrome">Google Chrome 5.0+</a> or <a href="http://www.mozilla.com/firefox">Firefox 3.6+</a>.</p>
 </div>
-		</div></li><li id="text-8" class="widget widget_text"><h3>Buy Me A Cup of Coffee?</h3><div class="box">			<div class="textwidget"><img src="http://freehtml5templates.com/images/coffee.png" style="float: left; padding-right: 5px;" alt="">If you appreciate the many free templates I create and would like to encourage me to continue doing so, then a small donation would be very much appreciated. Just enough for a cup of coffee, maybe?
-<br><br>
-<div>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="358K5ECXHMBK6">
-<input type="hidden" name="page_style" value="freehtml5templates">
-<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-</div></div>
 		</div></li>		</ul>	
 	</div>		<div class="clear"></div>
 	
@@ -364,7 +347,7 @@ var WPGroHo = {
 <noscript><p><img alt="Clicky" width="1" height="1" src="http://in.getclicky.com/212138ns.gif" /></p></noscript>
 <!-- End Clicky Tracking -->
 
-	<script src="http://stats.wordpress.com/e-201322.js" type="text/javascript"></script>
+	<script src="http://stats.wordpress.com/e-201351.js" type="text/javascript"></script>
 	<script type="text/javascript">
 	st_go({v:'ext',j:'1:1.2.1',blog:'20978427',post:'222'});
 	var load_cmc = function(){linktracker_init(20978427,222,2);};
@@ -396,26 +379,4 @@ qacct:"p-f2bEGHcHwljzU"
 </noscript>
 <!-- End Quantcast tag -->
 
-
-<!-- Performance optimized by W3 Total Cache. Learn more: http://www.w3-edge.com/wordpress-plugins/
-
-Served from: freehtml5templates.com @ 2013-05-30 01:00:49 -->
-
-<!-- W3 Total Cache: Page cache debug info:
-Engine:             disk: enhanced
-Cache key:          privacy-policy/_index.html
-Caching:            disabled
-Reject reason:      User agent is rejected
-Status:             not cached
-Creation Time:      0.127s
-Header info:
-Set-Cookie:         PHPSESSID=aput1ivj8aboo999m29n4v9h73; path=/
-Expires:            Thu, 19 Nov 1981 08:52:00 GMT
-Cache-Control:      no-store, no-cache, must-revalidate, post-check=0, pre-check=0
-Pragma:             no-cache
-X-Pingback:         http://freehtml5templates.com/xmlrpc.php
-Content-Type:       text/html; charset=UTF-8
-X-Powered-By:       W3 Total Cache/0.9.2.4
-Link:               <http://wp.me/P1q1rJ-3A>; rel=shortlink
-Vary:               Accept-Encoding
---></body></html>
+</body></html>
